--- a/part1.css
+++ b/part1.css
@@ -263,7 +263,7 @@ body{
     height: 1px;
     width: 80%;
     margin: auto ;
-    margin-top: -130px;
+    margin-top: -100px;
     background: rgba(2, 6, 12, 0.45);
 }
 
@@ -821,7 +821,7 @@ body{
     }
 }
 html {
-    scroll-behavior: smooth;
+    scroll-behavior:scroll;
 }
 #id_education {
     scroll-margin-top: 80px;
